--- a/src/Codewars.API/API.csproj
+++ b/src/Codewars.API/API.csproj
@@ -53,6 +53,7 @@
     <Compile Include="CodewarsClient.cs" />
     <Compile Include="Events\ActionType.cs" />
     <Compile Include="Events\HonorChanged.cs" />
+    <Compile Include="Events\IEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Events\RankUpgraded.cs" />
     <Compile Include="Requests\LanguageTypes.cs" />
